--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sb.fittingKeyboard.com.sb.fittingKeyboard.keyboardSettings.ui.MainActivity"
+    tools:context="com.sb.fittingkeyboard.keyboardsettings.ui.MainActivity"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <androidx.appcompat.widget.Toolbar
