--- a/app/src/main/res/layout/item_emoji.xml
+++ b/app/src/main/res/layout/item_emoji.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -11,10 +10,6 @@
         <variable
             name="kbservice"
             type="com.sb.fittingkeyboard.service.MainKeyboardService" />
-
-        <variable
-            name="util"
-            type="com.sb.fittingkeyboard.service.util.KeyboardUtilKt" />
     </data>
 
     <androidx.emoji.widget.EmojiButton
