--- a/app/src/main/res/layout/item_emoji.xml
+++ b/app/src/main/res/layout/item_emoji.xml
@@ -5,11 +5,11 @@
 
         <variable
             name="kbviewmodel"
-            type="com.sb.fittingkeyboard.service.viewmodel.KeyboardViewModel" />
+            type="com.sb.fittingKeyboard.service.viewmodel.KeyboardViewModel" />
 
         <variable
             name="kbservice"
-            type="com.sb.fittingkeyboard.service.MainKeyboardService" />
+            type="com.sb.fittingKeyboard.service.MainKeyboardService" />
     </data>
 
     <androidx.emoji.widget.EmojiButton
